# lama-interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  performance_test.sh  run_tests.sh
bytecode/: bytefile.cpp  bytefile.h
performance/: Sort.lama  Sort_orig.lama  Sort_orig.stats
runtime/: gc.c  gc.h  runtime.c  runtime.h  runtime_common.h
src/: analyzer.cpp  common.h  main.cpp  processor.h
